finish instructions for strawberry shortcake recipe

--- a/recipes/strawberry-shortcake.html
+++ b/recipes/strawberry-shortcake.html
@@ -31,10 +31,69 @@
         <li>23g cornstarch</li>
     </ul>
     <h4>Cream</h4>
+    <em>Make a day ahead if possible</em>
     <ul>
         <li>500g [100%] Heavy Whipping Cream</li>
         <li>150g [30%] Mascarpone</li>
         <li>180g [36%] Condensed Milk</li>
     </ul>
+    <h3>Steps</h3>
+    <p>Make components of the cake in the following order: Syrup -> Cream -> Genoise</p>
+    <h4>Syrup</h4>
+    <ol>
+        <li>Scale out 60g of cane sugar in small saucepan, add water</li>
+        <li>Heat over medium heat just until the sugar is dissolved</li>
+        <li>Store in an airtight container in the refrigerator until ready to use</li>
+    </ol>
+    <h4>Cream</h4>
+    <ol>
+        <li>Scale out cream, mascarpone, and condensed milk into mixing bowl or stand mixer bowl</li>
+        <li>Begin whipping on lowest speed until are all ingredients are incorporated and smooth, about 3-5 minutes</li>
+        <li>Increase speed to medium-low, and mix until you start seeing traces from your whisk, another 3-5 minutes</li>
+        <li>Increase speed to medium, and whisk <em>just</em> until you reach peaks that can stand up on their own, 3-5 minutes -- be careful not go any further than this, or the cream will begin to curdle and take on a grainy mouthfeel</li>
+    </ol>
+    <h4>Genoise</h4>
+    <ol>
+        <li>Preheat oven to 325F and set the rack to the center of your oven</li>
+        <li>Line cake pan with a round of parchment paper to cover the bottom. Line the sides with 4 inch tall strips of parchment paper</li>
+        <li>Scale butter, milk, and vanilla in a small heat-proof bowl and set aside</li>
+        <li>Scale cake flour and cornstarch in a separate bowl and set aside</li>
+        <li>Scale eggs, yolks, sugar, and honey in a heat-proof bowl, whisk to combine</li>
+        <li>Fill a medium saucepan with about 2 inches of water, and place over low heat. Once the water is simmering, place bowl with egg mixture over the pan.
+             Keep an eye on this mixture, whisking periodically to prevent the eggs from cooking. There is no need to vigorously whisk. Lower heat or turn off 
+             completely if needed. Check the temperature of the eggs with your thermometer - we're looking to hit a range of 37C to 40C (approximately body temp). 
+             The consistency should become looser and more homogenous as it warms up. Once eggs have reached the target temperature, take the bowl off the saucepan 
+             and transfer to a large mixing bowl</li>
+        <li>Keep the saucepan on the stove, cutting the heat if it's still on. Take your heat-proof bowl of the butter/milk/vanilla and leave it directly on the warm water</li>
+        <li>With the whisk attachment, begin mixing the eggs on medium-high speed (about speed 4). Set a timer for 10 minutes</li>
+        <li>After 10 minutes, check the consistency of your egg mixture - it should have tripled in volume to a glossy, light yellow color. T
+            he mixture should pile up onto iteself and maintain its shape for at least 5 seconds</li>
+        <li>With the mixer on its lowest setting, whisk the egg mixture to remove any big bubbles - about 5 minutes</li>
+        <li>Sift flour mixture over the top. Holding your rubber spatula perpindicular with a slight tilt to the right, cut through the middle of the 
+            batter and fold. You should be creating a J shape as your fold. Rotate bowl, and repeat until flour appears incorporated. Gently slide 
+            your spatula along the bottom of the bowl towards the center of the batter, and check if there are any dry spots. Repeat the J fold a 
+            few more rotations for extra assurance</li>
+        <li>Take milk mixture off of the warm water - the butter should be completely melted at this point. Add a few small scoops of batter into the milk and mix completely. 
+            This should lighten up the milk mixture so it can be easily incorporated back into the batter</li>
+        <li>Incorporate milk mixture into the batter, use your spatula to break the fall when adding it back in the prevent it from sinking to the bottom of the bowl. Start 
+            folding the batter immediately - we want to work quickly since adding fat to the batter will cause the batter to deflate rapidly. Look out for any streaks of 
+            unincorporated milk. Once everything looks good, check the bottom with your spatula. Repeat J fold a few more rotations</li>
+        <li>Pour batter from a height slightly above eye level into your prepared cake pan. Gently smooth out the top with the tip of your spatula, and tap on the counter a 
+            few times to knock out any remaining bubbles</li>
+        <li>Bake in preheated oven for 25-30 minutes - the cake should rise up a third of its original volume. You will know the cake is done when the sides have slighly 
+            shrunken away from the pan - you can also insert a toothpick to check for doneness</li>
+        <li>Remove cake from oven and drop it on the counter to remove any excess air. This will prevent the cake from shrinking any further while it cools.</li>
+        <li>Loosen sides of the cake from the pan with a butter knife and invert cake to coop upside down on the cooling rack. After 10-15 minutes, flip the cake 
+            to finish cooling right-side up. It is best to leave the parchment on the cake during the entire cooling process to prevent it from drying out any further</li>
+    </ol>
+    <h4>Final Assembly</h4>
+    <ol>
+        <li>Cut the cake into two halves - top and bottom</li>
+        <li>Baste the inner side of both halves with syrup</li>
+        <li>Spread a layer of cream on the bottom layer of cake and place a layer of strawberries on top</li>
+        <li>Spread one more layer of cream on top of the layer of strawberries and top with the top layer of cake</li>
+        <li>Spread cream on the outside of the cake - top and sides</li>
+        <li>Decorate outside of cake with strawberries with your design of choice</li>
+    </ol>
 </body>
 </html>
